# kiwix-mcp

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Justfile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: release-build.yml  unit-tests.yml
kiwix_client/: __init__.py  cli.py  client.py  parse.py
kiwix_mcp/: __main__.py  server.py
kiwix_mcp/skills/kiwix/: SKILL.md
kiwix_ovos/: __init__.py
tests/: test_client.py  test_cors.py  test_mcp.py  test_parse.py
tests/testdata/: opds_feed.xml  opds_feed_filtered.xml  search_book_scoped.html  search_empty.html  search_filter.html  search_filter_page2.html
