[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiwix-mcp"
version = "1.0.0"
description = "MCP server and client library for Kiwix HTTP servers"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.26",
    "defusedxml>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
kiwix-mcp = "kiwix_mcp.__main__:main"
kiwix-client = "kiwix_client.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kiwix_client", "kiwix_mcp", "kiwix_ovos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
